src/objects/ScoringGroup__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Scoring Group is for a PPI Template</description>
        <label>Is PPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of Scoring Group as it is in the org that the group was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Library that the Scoring Group was downloaded from</description>
        <label>Remote Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>Scoring Group</relationshipLabel>
        <relationshipName>Scoring_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Version</label>
        <referenceTo>SurveyVersion__c</referenceTo>
        <relationshipLabel>Scoring Groups</relationshipLabel>
        <relationshipName>Scoring_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Scoring Groups</relationshipLabel>
        <relationshipName>Scoring_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Scoring Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Scoring Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>